Revised queue apply logic and added UI for it

--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -6257,7 +6257,11 @@
     "ui.options.multiplayer.queueSpawnEdit.tooltip": "If enabled, remote vehicle spawns and edits will be put in a queue, instead of applying instantly",
     "ui.options.multiplayer.queueAuto": "Automatic queue system",
     "ui.options.multiplayer.queueAuto.tooltip": "If enabled, you will only spawn queued vehicles once you come to a stop",
-    "ui.options.multiplayer.queueAutoSkipRemote": "Don't queue if spectating others",
+    "ui.options.multiplayer.queueApplySpeed": "Queue apply speed treshold",
+    "ui.options.multiplayer.queueApplySpeed.tooltip": "Your vehicle has to be moving slower than this speed for queues to apply",
+    "ui.options.multiplayer.queueApplyTimeout": "Queue apply timeout",
+    "ui.options.multiplayer.queueApplyTimeout.tooltip": "You have to move under your set speed treshold for this long before queues apply",
+    "ui.options.multiplayer.queueAutoSkipRemote": "Skip queue if spectating others",
     "ui.options.multiplayer.queueAutoSkipRemote.tooltip": "If enabled and spectating other players, you will spawn queued vehicles right away",
     "ui.options.multiplayer.queueSkipUnicycle": "Don't queue player models (snowmen)",
     "ui.options.multiplayer.queueSkipUnicycle.tooltip": "If enabled, you will spawn other player models right away",
