locales update for v0.26.1

--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -1208,7 +1208,7 @@
     "ui.options.translationAutomatic": "Automatic",
 
 
-    "ui.options.userInterface.showStandalonePcs": "Include standalone .PC configurations",
+    "ui.options.userInterface.showStandalonePcs": "Include custom .PC configurations",
     "ui.options.userInterface.garageAutoSave": "Auto-save vehicle in garage",
 
     "ui.options.gameplay.gameplay": "Gameplay",
@@ -1228,15 +1228,19 @@
     "ui.options.gameplay.autoThrottle.tooltip": "If enabled, manual tranmissions cut the throttle on up-shifting and use rev-matching where required.",
     "ui.options.gameplay.gearboxSafety": "Gearbox safety assistant",
     "ui.options.gameplay.gearboxSafety.tooltip": "If enabled, gearboxes will deny shifts that might cause damage as well as prevent certain mode changes for a more immersive racing experience. (For example shifting out of M mode is disallowed until you are below a certain speed)",
-    "ui.options.gameplay.steeringSlowdown": "Slower steering at high speed",
-    "ui.options.gameplay.steeringSlowdownStartSpeed": "Start at",
-    "ui.options.gameplay.steeringSlowdownEndSpeed": "Stop at",
-    "ui.options.gameplay.steeringSlowdownMultiplier": "Slow down to",
     "ui.options.gameplay.steeringStabilization": "Oversteer reduction assistant",
     "ui.options.gameplay.steeringStabilizationMultiplier": "Strength",
     "ui.options.gameplay.steeringStabilizationEndSpeed": "Strength reached at",
     "ui.options.gameplay.steeringUndersteerReduction": "Understeer reduction assistant",
     "ui.options.gameplay.steeringUndersteerReductionMultiplier": "Strength",
+    "ui.options.gameplay.steeringSlowdown": "Slower steering at high speed",
+    "ui.options.gameplay.steeringSlowdownStartSpeed": "Start at",
+    "ui.options.gameplay.steeringSlowdownEndSpeed": "Stop at",
+    "ui.options.gameplay.steeringSlowdownMultiplier": "Slow down to",
+    "ui.options.gameplay.steeringLimit": "Limit steering at high speed",
+    "ui.options.gameplay.steeringLimitStartSpeed": "Start at",
+    "ui.options.gameplay.steeringLimitEndSpeed": "Stop at",
+    "ui.options.gameplay.steeringLimitMultiplier": "Limit max angle to",
     "ui.options.gameplay.steeringDirect": "Also apply to bindings using the filter: {{:: 'ui.controls.filters.2' | translate}}",
     "ui.options.gameplay.multiseat": "Use multiseat for this session",
     "ui.options.gameplay.switchHint": "Use the [action=switch_next_vehicle_multiseat]'Switch to next vehicle (multiseat)' binding to switch vehicles",
