Added new chat menu with ImGui

--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -6285,6 +6285,8 @@
     "ui.options.multiplayer.alternateModloading.tooltip": "This method allows you to unfocus the BeamNG window whilst loading mods, but it can not guarantee loading unstable mods.",
     "ui.options.multiplayer.disableInstabilityPausing": "Disable pausing caused by instabilities",
     "ui.options.multiplayer.disableInstabilityPausing.tooltip": "This will make gameplay smoother but can cause sync issues after several instabilities",
+    "ui.options.multiplayer.enableNewChatMenu": "Enable new chat menu",
+    "ui.options.multiplayer.enableNewChatMenu.tooltip": "This will enable the new chat menu, which is still in development and may have bugs.",
     "ui.options.multiplayer.simplifyRemoteVehicles": "Use simplified vehicles when available",
     "ui.options.multiplayer.simplifyRemoteVehicles.tooltip": "This setting will replace remote vehicles with the BeamNG provided 'traffic' versions. Reduces accuracy of collisions, but improves performance",
     
